# pancake

./: .travis.yml  ChangeLog.md  LICENSE  Makefile  Pancake.hs  README  README.org  Setup.hs  pancake.1  pancake.cabal  pancake.el
Pancake/: Command.hs  Common.hs  Configuration.hs  Printing.hs  Reading.hs  Rendering.hs  Unclutter.hs
Text/Pandoc/Readers/: Gopher.hs  Plain.hs  RDF.hs
deb/DEBIAN/: control
unclutter/: duckduckgo.xsl  github.xsl  hacker-news.xsl  lobsters.xsl  mediawiki.xsl
