name:                pancake
version:             0.1.0.1
synopsis:            A CLI web/gopher/file browser
tested-with:         GHC == 8.0.1
license:             GPL-3
license-file:        LICENSE
author:              defanor
maintainer:          defanor@uberspace.net
homepage:            https://defanor.uberspace.net/projects/pancake/
bug-reports:         https://github.com/defanor/pancake/issues
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md
                   , README.org
                   , pancake.el
cabal-version:       >=1.10

executable pancake
  main-is:             Pancake.hs
  other-modules:       Text.Pandoc.Readers.Plain
                     , Text.Pandoc.Readers.Gopher
  build-depends:       base >=4.9 && <5,
                       bytestring >= 0.10.8.1,
                       colorful-monoids >= 0.2.1.0,
                       containers >= 0.5.7.1,
                       data-default >= 0.7.1.1,
                       directory >= 1.2.6.2,
                       filepath >= 1.4.1.0,
                       mtl >= 2.2.1,
                       network-uri >= 2.6.1.0,
                       pandoc >= 1.19.2.2,
                       pandoc-types >= 1.17.0.5,
                       parsec >= 3.1.11,
                       process >= 1.6,
                       terminfo >= 0.4.0.2,
                       utf8-string >= 1.0.1.1,
                       yaml >= 0.8.23.3
  -- hs-source-dirs:
  default-language:    Haskell2010
  ghc-options:         -Wall
