name:                pancake
version:             0.1.4
synopsis:            A CLI web/gopher/file browser
description:         Pancake is a CLI web/gopher/file browser inspired
                     by Line Mode Browser. It relies on pandoc for
                     parsing, on curl and other external applications
                     for data loading, on emacs and other applications
                     to provide user interfaces.
tested-with:         GHC == 8.0.1
license:             GPL-3
license-file:        LICENSE
author:              defanor
maintainer:          defanor@uberspace.net
homepage:            https://defanor.uberspace.net/projects/pancake/
bug-reports:         https://github.com/defanor/pancake/issues
category:            Web
build-type:          Custom
extra-source-files:  ChangeLog.md
                   , README.org
                   , pancake.el
                   , pancake.1
cabal-version:       >=1.10
source-repository head
  type:     git
  location: git://github.com/defanor/pancake.git
custom-setup
  setup-depends:       Cabal >= 1.24
                     , base >= 4.9 && < 5
                     , filepath >= 1.4.1.0 && < 2

executable pancake
  main-is:             Pancake.hs
  other-modules:       Text.Pandoc.Readers.Plain
                     , Text.Pandoc.Readers.Gopher
                     , Pancake.Common
                     , Pancake.Configuration
                     , Pancake.Reading
                     , Pancake.Rendering
                     , Pancake.Printing
  build-depends:       base >= 4.9 && < 5
                     , bytestring >= 0.10.8.1 && < 1
                     , containers >= 0.5.7.1 && < 1
                     , data-default >= 0.7.1.1 && < 1
                     , directory >= 1.2.6.2 && < 2
                     , filepath >= 1.4.1.0 && < 2
                     , mtl >= 2.2.1 && < 3
                     , network-uri >= 2.6.1.0 && < 3
                     , pandoc >= 2 && < 3
                     , pandoc-types >= 1.17.0.5 && < 2
                     , parsec >= 3.1.11 && < 4
                     , process >= 1.6 && < 2
                     , terminfo >= 0.4.0.2 && < 1
                     , text >= 1.2.2.2 && < 2
                     , unix >= 2.7.2.0 && < 3
                     , utf8-string >= 1.0.1.1 && < 2
                     , yaml >= 0.8.23.3 && < 1
  -- hs-source-dirs:
  default-language:    Haskell2010
  ghc-options:         -Wall
